grammar.js
    source_file: $ => repeat($._root),
    _root: $ => choice(
      $.extern_import,
      $.import,
      $.external_function,
      alias($.module_method, $.method),
      $.class,
      $.trait,
      $.implement_trait,
      $.reopen_class,
      $._expression,
      $.define_constant,
    ),

    // Imports
    argument: $ => seq(
      field('name', $.identifier),
      ':',
      field('type', $._type),
    ),
    _returns: $ => seq('->', $._type),
    _type: $ => choice(
      prec.left($.generic_type),
      prec.right(alias($.constant, $.type)),
      $.ref_type,
      $.mut_type,
      $.uni_type,
      $.fn_type,
      $.tuple_type,
      $.move_type,
    ),
    generic_type: $ => seq(
      field('name', $.constant),
      field('arguments', $.type_arguments),
    ),
    type_arguments: $ => seq('[', comma_list($._type), ']'),
    ref_type: $ => seq('ref', field('type', $._type)),
    mut_type: $ => seq('mut', field('type', $._type)),
    uni_type: $ => seq('uni', field('type', $._type)),
    block: $ => seq('{', repeat($._expression), '}'),
    _expression: $ => choice(
      $.not,
      $.binary,
      $.define_variable,
      $.float,
      $.integer,
      $.self,
      $.nil,
      $.true,
      $.false,
      $.block,
      $.string,
      alias($.and_or, $.binary),
      $.cast,
      $.grouped_expression,
      $.tuple,
      $.array,
      $.break,
      $.return,
      $.next,
      $.try,
      $.async,
      $.await,
      $.throw,
      $.closure,
      $.field,
      $.if,
      $.while,
      $.loop,
      $.for,
      $.match,
      $.ref,
      $.mut,
      $.recover,
      prec.right($.identifier),
      $.call,
      $.constant,
      alias($.call_with_receiver, $.call),
      $.assign_receiver_field,
      $.assign_local,
      $.assign_field,
      $.replace_receiver_field,
      $.replace_local,
      $.replace_field,
      $.compound_assign_local,
      $.compound_assign_field,
      $.compound_assign_receiver_field,
    ),
    not: $ => seq('!', $._expression),

    // Assignments
    assign_receiver_field: $ => prec.right(
      3,
      seq(
        field('receiver', $._expression),
        '.',
        field('name', $._call_name),
        '=',
        field('value', $._expression)
      )
    ),
    replace_receiver_field: $ => prec.right(
      3,
      seq(
        field('receiver', $._expression),
        '.',
        field('name', $._call_name),
        ':=',
        field('value', $._expression)
      )
    ),
    assign_local: $ => seq(
      field('name', $.identifier),
      '=',
      field('value', $._expression),
    ),
    assign_field: $ => seq(
      field('name', $.field),
      '=',
      field('value', $._expression),
    ),
    replace_local: $ => seq(
      field('name', $.identifier),
      ':=',
      field('value', $._expression),
    ),
    replace_field: $ => seq(
      field('name', $.field),
      ':=',
      field('value', $._expression),
    ),
    compound_assign_local: $ => seq(
      field('name', $.identifier),
      choice(...COMPOUND_OPS),
      field('value', $._expression),
    ),
    compound_assign_field: $ => seq(
      field('name', $.field),
      choice(...COMPOUND_OPS),
      field('value', $._expression),
    ),
    compound_assign_receiver_field: $ => prec.right(
      3,
      seq(
        field('receiver', $._expression),
        '.',
        field('name', choice($.identifier, $.constant, $.integer)),
        choice(...COMPOUND_OPS),
        field('value', $._expression)
      )
    ),

    // Method calls
    _call_name: $ => choice(
      // Identifiers are aliased as "name" such that highlights don't conflict
      // with locals (e.g. ensuring `name` in `self.name` doesn't get
      // highlighted as a variable if a local variable with the same name
      // exists).
      alias($.identifier_with_special, $.name),
      alias($.identifier, $.name),
      alias($.constant, $.name),
      $.integer,
    ),
    call: $ => choice(
      seq(field('name', alias($.identifier_with_special, $.name))),
      seq(
        field('name', $._call_name),
        field(
          'type_arguments',
          optional(alias($.call_type_arguments, $.type_arguments))
        ),
        field('arguments', alias($.call_arguments, $.arguments)),
      ),
      seq(
        field('name', $._call_name),
        field('type_arguments', alias($.call_type_arguments, $.type_arguments)),
      ),
    ),
    named_argument: $ => seq(
      field('name', $.identifier),
      ':',
      field('value', $._expression)
    ),
    ref: $ => prec.right(seq('ref', $._expression)),
    mut: $ => prec.right(seq('mut', $._expression)),
    recover: $ => prec.right(seq('recover', $._expression)),

    // Sequences
    grouped_expression: $ => seq('(', $._expression ,')'),
    tuple: $ => seq('(', $._expression, ',', comma_list($._expression), ')'),
    array: $ => seq('[', comma_list($._expression), ']'),

    // Control flow
    return: $ => prec.right(seq(
      'return',
      optional(seq(token.immediate(/[ \t]+/), optional($._expression))),
    )),
    try: $ => seq('try', $._expression),
    throw: $ => seq('throw', $._expression),
    async: $ => seq('async', $._expression),
    await: $ => seq('await', $._expression),

    if: $ => prec.left(
      0,
      seq(
        'if',
        field('condition', $._expression),
        field('consequence', $.block),
        field('alternative', optional($.else)),
      )
    ),
    else: $ => seq('else', choice($.block, $.if)),

    // Loops
    while: $ => seq(
      'while',
      field('condition', $._expression),
      field('body', $.block),
    ),
    loop: $ => seq('loop', field('body', $.block)),
    for: $ => seq(
      'for',
      field('pattern', $._pattern),
      'in',
      field('iterator', $._expression),
      field('body', $.block),
    ),

    // Pattern matching
    match: $ => seq(
      'match',
      field('value', $._expression),
      '{',
      field('cases', optional($.cases)),
      '}'
    ),
    cases: $ => seq(
      $.case,
      repeat(seq(optional(','), $.case)),
      optional(','),
    ),
    case: $ => seq(
      'case',
      field('pattern', $._pattern),
      field('guard', optional(seq('if', $._expression))),
      '->',
      field('body', $._expression),
    ),
    _pattern: $ => choice(
      $.wildcard_pattern,
      $.identifier_pattern,
      alias($.integer, $.integer_pattern),
      alias($.string, $.string_pattern),
      alias($.constant, $.constant_pattern),
      alias($.namespaced_constant_pattern, $.constant_pattern),
      $.enum_pattern,
      $.class_pattern,
      $.tuple_pattern,
      $.or_pattern,
      $.boolean_pattern,
      $.array_pattern,
    ),
    identifier_pattern: $ => seq(
      field('modifier', optional(alias($.mutable, $.modifier))),
      field('name', $.identifier),
      field('type', optional(seq(':', $._type))),
    ),
    wildcard_pattern: $ => '_',
    tuple_pattern: $ => seq('(', comma_list($._pattern), ')'),
    array_pattern: $ => seq('[', comma_list($._pattern), ']'),
    enum_pattern: $ => seq(
      field('name', $.constant),
      field('arguments', alias($.enum_pattern_arguments, $.arguments)),
    ),
    class_pattern: $ => seq('{', comma_list($.field_pattern), '}'),
    field_pattern: $ => seq(
      field('name', $.field),
      '=',
      field('pattern', $._pattern),
    ),
    or_pattern: $ => prec.left(
      seq($._pattern, repeat1(prec.left(seq('or', $._pattern)))),
    ),
    boolean_pattern: $ => choice('true', 'false'),
    closure: $ => seq(
      'fn',
      field('modifier', optional(alias($.move, $.modifier))),
      field('arguments', optional(alias($.closure_arguments, $.arguments))),
      field('returns', optional($._returns)),
      field('body', $.block),
    ),
    define_constant: $ => prec.left(
      2,
      seq(
        'let',
        field('visibility', optional($.visibility)),
        field('name', $.constant),
        '=',
        field('value', $._expression),
      )
    ),
    define_variable: $ => prec.left(
      1,
      seq(
        'let',
        field('pattern', $._pattern),
        '=',
        field('value', $._expression),
        field('else', optional(seq('else', $._expression))),
      ),
    ),

    // Binary expressions
    binary: $ => prec.left(
      2,
      seq(
        field('left', $._expression),
        field(
          'operator',
          choice(...OPS),
        ),
        field('right', $._expression),
      )
    ),
    cast: $ => prec.left(
      2,
      seq(
        field('expression', $._expression),
        'as',
        field('type', $._type),
      )
    ),

    // Numbers
    float: _ => choice(
      // 1.2, 1.2e+3
      /-?\d[\d_]*\.[\d_]+((e|E)(\+|-)?[\d_]+)?/,

      // 1e+2
      /-?\d[\d_]*(e|E)(\+|-)?[\d_]+/,
    ),
    integer: _ => choice(
      // 123, 0xFF
      /-?(0x[\da-fA-F_]+|\d[\d_]*)/,

      // 0b11
      /-?0b[01_]+/
    ),

    // Strings
    string: $ => choice(
      seq(
        "'",
        repeat(choice(
          $.interpolation,
          $.escape_sequence,
          alias('$', $.string_content),
          alias(/[^'\$\\]+/, $.string_content),
        )),
        "'"
      ),
      seq(
        '"',
        repeat(choice(
          $.interpolation,
          $.escape_sequence,
          alias('$', $.string_content),
          alias(/[^"\$\\]+/, $.string_content),
        )),
        '"'
      ),
    ),
    escape_sequence: _ => choice(
      seq('\\u{', /[a-fA-F0-9]*/, '}'),
      '\\\\',
      /\\[a-z0\$'"]/,
    ),
    interpolation: $ => seq('${', repeat($._expression), '}'),

    // Various terminals (e.g. identifiers)
    self: _ => 'self',
    nil: _ => 'nil',
    true: _ => 'true',
    false: _ => 'false',
    break: _ => 'break',
    next: _ => 'next',
    visibility: _ => 'pub',
    identifier: _ => /([a-z]|_)[a-zA-Z\d_]*/,
    field: _ => /@[a-zA-Z\d_]+/,
    constant: _ => /[A-Z][a-zA-Z\d_]*/
  }
});
